Old・Srcのリンクで間に入っている中点にまで下線が入っていた

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1{
     color: #9baec8;
 }
 
-.old_and_src{
+a.old_and_src{
     font-family: 'Ubuntu', sans-serif;
     color: #9baec8;
     text-decoration: underline;
