--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ p.old_and_src{
 
 a.old_and_src{
     text-decoration: underline;
+    font-family: 'Ubuntu', sans-serif;
+    color: #9baec8;
+    margin-top: 20px;
+    margin-bottom: 3px;
 }
 
 .copyright{
