--- a/style.css
+++ b/style.css
@@ -13,32 +13,37 @@ img.avatar {
 
 h1 {
     margin-top: 10px;
-    margin-bottom: 0px;
-    font-family: 'Noto Sans JP', sans-serif;
+    margin-bottom: 0;
     color: #ffffff;
+}
+
+.font-ubuntu {
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.font-notosansjp {
+    font-family: 'Noto Sans JP', sans-serif;
+}
+
+.text-primary {
+    color: #9baec8;
 }
 
 .englishname {
     font-size: 22px;
-    font-family: 'Ubuntu', sans-serif;
     color: #d9e1e8;
     margin-bottom: 10px;
 }
 
 .altname {
     font-size: 15px;
-    font-family: 'Ubuntu', sans-serif;
-    color: #9baec8;
 }
 
 .aboutme {
     font-size: 17px;
-    font-family: 'Noto Sans JP', sans-serif;
-    color: #9baec8;
 }
 
-p.old_and_src {
-    font-family: 'Ubuntu', sans-serif;
+.old_and_src, .old_and_src > a {
     color: #9baec8;
     margin-top: 20px;
     margin-bottom: 3px;
@@ -46,15 +51,9 @@ p.old_and_src {
 
 a.old_and_src {
     text-decoration: underline;
-    font-family: 'Ubuntu', sans-serif;
-    color: #9baec8;
-    margin-top: 20px;
-    margin-bottom: 3px;
 }
 
 .copyright {
-    font-family: 'Ubuntu', sans-serif;
-    color: #9baec8;
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 10px;
 }
