--- a/buttons.css
+++ b/buttons.css
@@ -1,246 +1,127 @@
-a.btn_Twitter {
-    display: block;
+.btn {
     width: 230px;
+    display: block;
     padding: 0.5em;
     text-align: center;
     text-decoration: none;
     font-family: 'Ubuntu', monospace;
-    color: #55acee;
-    border: 2px solid #55acee;
+    border: 2px solid;
     border-radius: 3px;
     transition: .4s;
     position: relative;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
 }
 
-a.btn_Twitter i {
+.btn > i {
+    background: transparent !important;
     position: absolute;
     top: 59%;
     left: 10px;
     margin-top: -0.5em;
+}
+
+.btn.twitter {
+    color: #55acee;
+    border-color: #55acee;
+}
+
+.btn.gitHub {
+    color: #f5f5f5;
+    border-color: #f5f5f5;
+}
+
+.btn.mastodon {
+    width: 214px;
+    color: #2b90d9;
+    border-color: #2b90d9;
+
+    padding-right: 24px;
+    text-align: right;
+}
+
+.btn.email {
+    color: #dadada;
+    border-color: #d44638;
+
+    text-align: right;
+}
+
+.btn.discord {
+    color: #99aab5;
+    border-color: #7289DA;
+}
+
+.btn.blogger {
+    color: #f06a35;
+    border-color: #f06a35;
+}
+
+.btn.tumblr {
+    color: #f7f7f7;
+    border-color: #34445A;
+}
+
+.btn.twitter i {
     color: #0070be;
 }
 
-a.btn_Twitter:hover {
+.btn.gitHub i {
+    color: #f5f5f5;
+}
+
+.btn.mastodon i {
+    color: #2b90d9;
+}
+
+.btn.email i {
+    color: #dadada;
+}
+
+.btn.discord i {
+    color: #7289DA;
+}
+
+.btn.blogger i {
+    color: #f06a35;
+}
+
+.btn.tumblr i {
+    color: #f7f7f7;
+}
+
+.btn.twitter:hover, .btn.twitter:hover > i {
     background: #55acee;
     color: #fff;
 }
 
-a.btn_Twitter:hover i {
-    color: #fff;
-}
-
-
-a.btn_GitHub {
-    display: block;
-    width: 230px;
-    padding: 0.5em;
-    text-align: center;
-    text-decoration: none;
-    font-family: 'Ubuntu', monospace;
-    color: #f5f5f5;
-    border: 2px solid #f5f5f5;
-    border-radius: 3px;
-    transition: .4s;
-    position: relative;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-a.btn_GitHub i {
-    position: absolute;
-    top: 59%;
-    left: 10px;
-    margin-top: -0.5em;
-    color: #f5f5f5;
-}
-
-a.btn_GitHub:hover {
+.btn.gitHub:hover, .btn.gitHub:hover > i {
     background: #f5f5f5;
     color: #333;
 }
 
-a.btn_GitHub:hover i {
-    color: #333;
-}
-
-
-a.btn_Mastodon {
-    display: block;
-    width: 214px;
-    padding: 0.5em;
-    padding-right: 24px;
-    text-align: right;
-    text-decoration: none;
-    font-family: 'Ubuntu', monospace;
-    color: #2b90d9;
-    border: 2px solid #2b90d9;
-    border-radius: 3px;
-    transition: .4s;
-    position: relative;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-a.btn_Mastodon i {
-    position: absolute;
-    top: 59%;
-    left: 10px;
-    margin-top: -0.5em;
-    color: #2b90d9;
-}
-
-a.btn_Mastodon:hover {
+.btn.mastodon:hover, .btn.mastodon:hover > i {
     background: #d9e1e8;
     color: #2b90d9;
 }
 
-a.btn_Mastodon:hover i {
-    color: #2b90d9;
-}
-
-
-a.btn_Email {
-    display: block;
-    width: 230px;
-    padding: 0.5em;
-    text-align: right;
-    text-decoration: none;
-    font-family: 'Ubuntu', monospace;
-    color: #dadada;
-    border: 2px solid #d44638;
-    border-radius: 3px;
-    transition: .4s;
-    position: relative;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-a.btn_Email i {
-    position: absolute;
-    top: 59%;
-    left: 10px;
-    margin-top: -0.5em;
-    color: #dadada;
-}
-
-a.btn_Email:hover {
-    border: 2px solid #B23121;
-    border-radius: 3px;
+.btn.email:hover, .btn.email:hover > i {
     background: #d44638;
     color: #eeeeee;
 }
 
-a.btn_Email:hover i {
-    color: #eeeeee;
-}
-
-
-a.btn_Discord {
-    display: block;
-    width: 230px;
-    padding: 0.5em;
-    text-align: center;
-    text-decoration: none;
-    font-family: 'Ubuntu', monospace;
-    color: #99aab5;
-    border: 2px solid #7289DA;
-    border-radius: 3px;
-    transition: .4s;
-    position: relative;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-a.btn_Discord i {
-    position: absolute;
-    top: 59%;
-    left: 10px;
-    margin-top: -0.5em;
-    color: #7289DA;
-}
-
-a.btn_Discord:hover {
+.btn.discord:hover, .btn.discord:hover > i {
     background: #7289da;
     color: #fff;
 }
 
-a.btn_Discord:hover i {
-    color: #fff;
-}
-
-
-a.btn_Blogger {
-    display: block;
-    width: 230px;
-    padding: 0.5em;
-    text-align: center;
-    text-decoration: none;
-    font-family: 'Ubuntu', monospace;
-    color: #f06a35;
-    border: 2px solid #f06a35;
-    border-radius: 3px;
-    transition: .4s;
-    position: relative;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-a.btn_Blogger i {
-    position: absolute;
-    top: 59%;
-    left: 10px;
-    margin-top: -0.5em;
-    color: #f06a35;
-}
-
-a.btn_Blogger:hover {
+.btn.blogger:hover, .btn.blogger:hover > i {
     background: #f06a35;
     color: #fff;
 }
 
-a.btn_Blogger:hover i {
-    color: #fff;
-}
-
-
-a.btn_Tumblr {
-    display: block;
-    width: 230px;
-    padding: 0.5em;
-    text-align: center;
-    text-decoration: none;
-    font-family: 'Ubuntu', monospace;
-    color: #f7f7f7;
-    border: 2px solid #34445A;
-    border-radius: 3px;
-    transition: .4s;
-    position: relative;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-a.btn_Tumblr i {
-    position: absolute;
-    top: 59%;
-    left: 10px;
-    margin-top: -0.5em;
-    color: #f7f7f7;
-}
-
-a.btn_Tumblr:hover {
+.btn.tumblr:hover, .btn.tumblr:hover > i {
     background: #34445A;
-    color: #f7f7f7;
-}
-
-a.btn_Tumblr:hover i {
     color: #f7f7f7;
 }
